Fixed broken picture links and adjusted spacing

--- a/style.css
+++ b/style.css
@@ -436,11 +436,6 @@ body.dark #scrollTop{
 
 }
 
-/* ======================================================
-   PART 2A-2
-   Navigation + Hero
-====================================================== */
-
 /* =============================
    Navigation
 ============================= */
@@ -1647,7 +1642,7 @@ body.dark .amazon-btn{
 
 .page-hero{
 
-    padding:80px 20px 50px;
+    padding:60px 20px 40px;
 
     text-align:center;
 
